tests/fixtures/invalid/set_gt_bool.py
# Cannot compare with > Set[int] and Bool
x: bool = {1, 2, 3} > True
